el tercer cambio

--- a/local1.html
+++ b/local1.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Prueba de manejo de versiones</h1>
     <h2>este es el segundo cambio</h2>
+    <h3>este es el tercer cambio</h3>
   </body>
 </html>
