uno mas locar con UI

--- a/local1.html
+++ b/local1.html
@@ -9,5 +9,6 @@
     <h1>Prueba de manejo de versiones</h1>
     <h2>este es el segundo cambio</h2>
     <h3>este es el cuarto cambio (modificado) <!-fallido</h3>
+    <h4>el bueno para guithub</h4>
   </body>
 </html>
